# ansible-development-command

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py
jp/rync/command/: adc.py
jp/rync/command/project/: management.py
lib/adc/cli/: parse.py
lib/adc/management/: project.py
lib/adc/models/: host.py  inventory.py  setting.py
lib/adc/services/management/: abstracts.py  inventory.py  project.py
test/adc/cli/: test_parse.py
test/adc/models/: test_hosts.py  test_inventory.py  test_setting.py
test/adc/services/management/: test_inventory.py  test_project.py
test/cli/: test_parse.py
test/jp/rync/command/: test_adc.py
test/jp/rync/command/files/: test_hosts.py
test/jp/rync/command/project/: test_management.py
test/management/: test_hosts.py  test_project.py
test/resources/: logger.conf
test/util/: file.py
