[metadata]
name=ansible-development-command
version=0.4.0
author=Ryo Nishikawa
author_email=ryo.pg.se+adc@gmail.com
url=https://github.com/RyoNishikawa/
description=development command for ansible.

[options]
package_dir=
 =lib
packages=find:
scripts=bin/adc

[options.packages.find]
where=lib
exclude=test,test.*

